# tz_app

./: .env  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  packages.txt  pyproject.toml  pytest.ini
alembic/versions/: dd7278721c88_initial.py
app/: main.py
app/core/: config.py  deps.py  security.py
app/crud/: auth.py  task.py  user.py
app/db/: session.py
app/models/: base.py
app/routes/: auth.py  task.py  user.py
app/schemas/: auth.py  task.py  user.py
app/tests/: conftest.py  test_auth.py
